# rcs

./: .gitignore  .vercelignore  Cargo.toml  README.md  package.json  vercel.json
.cargo/: config.toml
.github/: workflows
assets/cubemap/: how_to_generate_cubemap.md
assets/models/: rcs_truster.glb
assets/models/ship/: license.txt  scene.gltf
scripts/: build.sh
src/: components.rs  constants.rs  loading.rs  main.rs  pipelines_ready.rs  resources.rs
src/levels/: level1.rs
src/scenes/: main_scene.rs
src/systems/: camera.rs  controller.rs  cubemap.rs  light.rs  mod.rs  player.rs  setup.rs  space_dust.rs  ui.rs
