[package]
name = "rcs"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", features = [
    "simd",
    "2d",
] }
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.2"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"

[target.'cfg(debug_assertions)'.dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }

[target.'cfg(not(debug_assertions))'.dependencies]
bevy = { version = "0.14.1" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
