[package]
name = "rcs"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", features = [
    "simd",
    "debug-plugin",
] }
bevy = { version = "0.14.1" }
bevy-inspector-egui = { version = "0.25.2", default-features = false, features = [
    "bevy_render",
] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"

# Add this section to enable the unstable APIs for web targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = []
production = ["bevy/webgpu"]
